--- a/src/index.css
+++ b/src/index.css
@@ -42,18 +42,24 @@ button {
 
 .container {
   max-width: 375px;
-  padding-left: 20px;
-  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
+}
+@media only screen and (min-width: 375px) {
+  .container {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
-@media screen and (min-width: 1050px) {
+@media screen and (min-width: 1000px) {
   .container {
     max-width: 1200px;
   }
